--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ body {
 }
 
 header {
-    background-color: #007bff;
+    background-color: #964b00;
     color: white;
     padding: 20px;
     text-align: center;
